<resources>
    <string name="app_name">Memory Game</string>
    <string name="restart">restart</string>
    <string name="progress">Progress</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="tag_btn_guess">order</string>
    <string name="tag_btn_color">color</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_have_a_good_memory">You have a good memory!</string>
</resources>