<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_restart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/m_lg"
        android:padding="@dimen/pd_lg"
        android:text="@string/restart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/pb"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/m_lg"
        android:layout_marginLeft="@dimen/m_lg"
        android:layout_marginEnd="@dimen/m_lg"
        android:layout_marginRight="@dimen/m_lg"
        android:layout_marginBottom="@dimen/m_lg"
        android:max="6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_progress" />

    <TextView
        android:id="@+id/tv_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/m_lg"
        android:layout_marginLeft="@dimen/m_lg"
        android:layout_marginBottom="@dimen/m_lg"
        android:text="@string/progress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.54" />

    <Button
        android:id="@+id/btn_one"
        android:layout_width="@dimen/btn_size"
        android:layout_height="@dimen/btn_size"
        android:layout_marginBottom="16dp"
        android:text="@string/_1"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/btn_three"
        app:layout_constraintEnd_toEndOf="@+id/btn_three"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btn_two"
        android:layout_width="@dimen/btn_size"
        android:layout_height="@dimen/btn_size"
        android:layout_marginBottom="16dp"
        android:text="@string/_2"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/btn_four"
        app:layout_constraintStart_toStartOf="@+id/btn_four"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btn_three"
        android:layout_width="@dimen/btn_size"
        android:layout_height="@dimen/btn_size"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/_3"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/h_guideline"
        app:layout_constraintEnd_toStartOf="@+id/v_guideline"
        app:layout_constraintTop_toTopOf="@+id/h_guideline"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btn_four"
        android:layout_width="@dimen/btn_size"
        android:layout_height="@dimen/btn_size"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/_4"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/h_guideline"
        app:layout_constraintStart_toStartOf="@+id/v_guideline"
        app:layout_constraintTop_toTopOf="@+id/h_guideline"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btn_five"
        android:layout_width="@dimen/btn_size"
        android:layout_height="@dimen/btn_size"
        android:layout_marginTop="16dp"
        android:text="@string/_5"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="@+id/btn_three"
        app:layout_constraintTop_toBottomOf="@+id/btn_three"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btn_six"
        android:layout_width="@dimen/btn_size"
        android:layout_height="@dimen/btn_size"
        android:layout_marginTop="16dp"
        android:text="@string/_6"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintStart_toStartOf="@+id/btn_four"
        app:layout_constraintTop_toBottomOf="@+id/btn_four"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/congratulations_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/m_lg"
        android:gravity="center|center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/h_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="gone">

        <TextView
            android:id="@+id/tv_congratulations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/congratulations"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

        <TextView
            android:id="@+id/tv_congratulations_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_have_a_good_memory" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>